@@ -1,3 +1,7 @@
+2002-02-27  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* capplet-util.c: s/PACKAGE/GETTEXT_PACKAGE/g
+	
 2002-02-12  Lauris Kaplinski  <lauris@ximian.com>
 
 	* gconf-property-editor.c (peditor_font_value_changed): Kill warning
